<resources>
    <string name="app_name">LFA Educa</string>

    <string name="action_settings">Settings</string>
    <string name="not_available_text">N/A</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sim">SIM</string>
    <string name="nao">NAO</string>
    <string name="letraA">A</string>
    <string name="letraD">D</string>
    <string name="letraC">C</string>
    <string name="letraB">B</string>
    <string name="proximo">Próximo</string>
    <string name="resposta_correta">Resposta Correta.</string>
    <string name="resposta_errada">Resposta Errada</string>
    <string name="quiz_geral">Quiz Geral</string>
    <string name="quiz">Quiz</string>
    <string name="resultado_quiz">Resultado do Quiz</string>
    <string name="pergunta_do_quiz">Pergunta do Quiz</string>
    <string name="inicio">Início</string>
    <string name="refazer">Refazer</string>
    <string name="cancelar">Cancelar</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="letraE">E</string>
    <string name="objetivo_do_aplicativo">Objetivo do Aplicativo</string>
    <string name="ObjetivoDescricao">O principal objetivo do aplicativo é apoiar o âmbito pedagógico da disciplina Linguagem Formais e Autômatos através dos conteúdos de maneira simples e interativa, despertando a curiosidade de seus leitores em cada tópico.</string>
    <string name="textviewTimeDescricao">Diego Paiva Torres \ndiegopaivatorres@gmail.com\n\nDijon Cavalcante Braga\ndijoncavalcante@gmail.com\n\nLeandro Batista Machado\nleandro.b.machado@live.com\n\nMarcos Antônio de Araújo Dias\nmarcosaraujodias@gmail.com\n\nPaulo Henrique Carvalho Ribeiro\npauloribeiro133@gmail.com\n\nRafaela Ferreira dos Santos\nrafaelaferreira_103@hotmail.com</string>
    <string name="orientador">Orientador:</string>
    <string name="textviewOrientadorDescricao">Camilo Batista de Souza</string>
    <string name="Descricao">Descrição</string>
    <string name="DescricaoDesc">O aplicativo baseado na ementa da disciplina Linguagem Formais e Autômatos (LFA) 2016/2 do curso de Ciência da Computação da Centro Universitário do Norte – UNINORTE, cujo o conteúdo será exibido a nível acadêmico.</string>
</resources>
