<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#FFFF"
    android:id="@+id/idScrollViewPergunta">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textViewPergunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:textColor="@color/md_black_1000"
            android:text="@string/pergunta_do_quiz"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|right"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:checkedButton="@+id/letraA">

            <RadioButton
                android:id="@+id/letraA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/letraA"
                android:textColor="@color/md_black_1000"
                android:layout_marginBottom="10dp"/>

            <RadioButton
                android:id="@+id/letraB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/letraB"
                android:textColor="@color/md_black_1000"
                android:layout_marginBottom="10dp"/>


            <RadioButton
                android:id="@+id/letraC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/letraC"
                android:textColor="@color/md_black_1000"
                android:layout_marginBottom="10dp"/>


            <RadioButton
                android:id="@+id/letraD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/letraD"
                android:textColor="@color/md_black_1000"
                android:layout_marginBottom="10dp"/>

            <RadioButton
                android:id="@+id/letraE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/letraE"
                android:textColor="@color/md_black_1000"
                android:layout_marginBottom="10dp"/>


        </RadioGroup>

        <include layout="@layout/layout_botoes_pergunta_quiz"/>
        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->

            <!--&gt;-->

            <!--<ImageButton-->
                <!--android:id="@+id/imageButtonIdCancelar"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:contextClickable="true"-->
                <!--android:src="@drawable/botao_cancelar"-->
                <!--android:background="#FFFF"-->
                <!--android:paddingTop="15dp"-->

                <!--android:layout_marginLeft="50dp"-->
                <!--android:layout_marginTop="15dp"-->
                <!--android:layout_marginBottom="15dp"-->
                <!--android:layout_alignRight="@+id/imageButtonIdProximo"-->
                <!--android:layout_alignEnd="@+id/imageButtonIdProximo"-->
                <!--android:layout_alignParentTop="true"-->
                <!--/>-->
            <!--&lt;!&ndash;android:layout_gravity="center"&ndash;&gt;-->
            <!--<ImageButton-->
                <!--android:id="@+id/imageButtonIdProximo"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:contextClickable="true"-->
                <!--android:src="@drawable/botao_proximo"-->
                <!--android:background="#FFFF"-->
                <!--android:paddingTop="15dp"-->
                <!--android:layout_marginLeft="15dp"-->
                <!--android:layout_marginTop="15dp"-->
                <!--android:layout_marginBottom="15dp"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_centerHorizontal="true"-->

                <!--/>-->
            <!--&lt;!&ndash;android:layout_gravity="center|right|center_horizontal"&ndash;&gt;-->
        <!--</RelativeLayout>-->


    </LinearLayout>
</ScrollView>